<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"/>

    <Button
        android:id="@+id/btn_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/btn_start"
        android:text="@string/stop"
        android:layout_toEndOf="@id/btn_start"/>

    <Button
        android:id="@+id/btn_init"
        android:text="@string/init"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/btn_end"
        android:layout_toEndOf="@id/btn_end"/>

    <Button
        android:id="@+id/btn_clear"
        android:text="@string/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/btn_init"
        android:layout_toEndOf="@id/btn_init"/>

    <TextView
        android:id="@+id/qimo_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_start"
        android:text="@string/qimo_dead"
        android:layout_marginTop="10dp"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/airplay_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/airplay_dead"
        android:layout_below="@id/qimo_state"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="15sp"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/im_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/im_dead"
        android:layout_below="@id/airplay_state"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="15sp"
        android:visibility="gone"/>
    
    <VideoView
        android:id="@+id/video_player"
        android:layout_width="192dp"
        android:layout_height="108dp"
        android:layout_below="@id/qimo_state"
        android:layout_marginTop="5dp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/control_playback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/control_pause"/>
        <Button
            android:id="@+id/control_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/control_playback"
            android:layout_marginLeft="5dp"
            android:text="@string/control_stop"
            android:layout_toEndOf="@id/control_playback"
            android:layout_marginStart="5dp"/>

        <Button
            android:id="@+id/control_seek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/control_seek"
            android:layout_toRightOf="@id/control_stop"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/control_stop"/>
    </RelativeLayout>

</RelativeLayout>